[project]
name = "fucache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "futa-t", email = "143526236+futa-t@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
